Add duplicate in file tree (Ctrl+drag)